Fix : overflow submenu theme : long sub Menus are invisible
header .grid

--- a/themes/defaut/css/theme.css
+++ b/themes/defaut/css/theme.css
@@ -31,6 +31,9 @@ body {
 	background-color: #fff;
 }
 /* ---------- Header ---------- */
+.header .grid {/* Fix sub Menu are (in)visible; ) */
+	overflow: initial;
+}
 
 .heading-small {
 	font-size: 2rem;
